maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: not found: value getdirection
    getdirection() match {
    ^Escaper:22: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.Escaper'
override def run () {
             ^