maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (getDirection() == Direction.NORD && !estFaceMur()) {
    avance()
  }
  
  while (!estSurBiscuit()) {
    
    keepHandOnSideWall()
  }
  prendBiscuit()
  
  def keepHandOnSideWall() {
    gauche()
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
}

override def run () {
  while (!estSurBiscuit()) {
    getdirection() match {
      case Direction.NORD => avance()
      case Direction.OUEST =>
      droite()
      if (!estFaceMur()) {
        avance()
      } else {
        gauche()
        
      }
    }
  }
}